[package]
name = "ripple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["migration"]

[dependencies]
axum = { version = "0.7.4",features = ["http2","multipart","ws"] }
sea-orm = { version = "0.12",features = ["sqlx-all","with-chrono","runtime-tokio-rustls"] }
migration = {path = "migration"}
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2",features = ["cors"] }
tracing-subscriber = "0.3.18"
log = { version = "0.4.20", features = [] }
aws-sdk-s3 = "1.17.0"
chrono = "0.4.34"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
